2011-12-14 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-info-mode-map): Add
	`epackage-info-mode-cmd-email-upstream-ping'.

2011-12-13 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--batch-ui-menu-string): Adjust wording.
	(epackage-files-recursive-lisp): Add TYPE argument.
	(epackage-devel-generate-compile-main): Correct file path
	names.

2011-12-13 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-princ): New.
	(epackage--princ-buffer): New.
	(epackage-ui-simple): New.
	(epackage-manager): New.
	(epackage--buffer-princ-default): New.
	(epackage--batch-ui-menu-help): Start output with newline.
	(epackage--batch-ui-menu-string): Start output with newline.
	(epackage--batch-ui-menu-header): Start output with newline.
	(epackage-batch-ui-simple-p): New.
	(epackage--batch-separator-insert): New.
	(epackage-batch-ui-menu-run): New.

2011-12-12 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--layout-template-compile): Check path.
	(epackage-byte-compile-package-run-file): Rename. Was
	`epackage-byte-compile-package-1'. Add argument checks.

2011-12-12 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--root-directory): Remove ~/elisp
	support and migrate to ~/.emacs.d
	(epackage-package-name-valid-p): Correct regexp.
	(epackage--layout-template-info): (License): Add tag Custom.
	(epackage-info-mode-font-lock-keywords): Add Licence-Text.
	(epackage-info-mode-cmd-email-upstream-ping): New.
	(epackage--info-mode-email-ping-body): New.
	(epackage-info-mode-name): Rename. Was
	`epackage-info-mode-text'.
	(epackage--version-time): Add two dashes to variable name.
	(epackage--maintainer): Add two dashes to variable name.
	(epackage--url-doc-emacswiki): New.
	(epackage--info-mode-email-ping-subject): New.
	(epackage-mail-macro): Correct `lisp-indent-function' spec.
	(epackage-pkg-lint-directory-interactive): Add
	`epackage-initialize'.
	(epackage-pkg-lint-info-buffer-field-all): New.